--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>uNmINeD</title>
+    <title>Derp & Chill Map by uNmINeD</title>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="Derp & Chill S2 Map" />
+    <meta property="og:title" content="Derp & Chill S3 Map" />
     <meta property="og:url" content="https://map.derpandchill.com" />
-    <meta property="og:image" content="https://map.derpandchill.com/s2-map.derpandchill.com.png" />
+    <meta property="og:image" content="https://map.derpandchill.com/s3-map.derpandchill.com.png" />
 
     <!-- OpenLayers  -->
     <link rel="stylesheet" type="text/css" href="lib/ol.css">
